# lqr-simple

./: CMakeLists.txt  README.md
src/: lqr.h  lqr_all.h  lqr_base.h  lqr_carver.c  lqr_carver_bias.c  lqr_carver_bias_pub.h  lqr_carver_list.c  lqr_carver_list_pub.h  lqr_carver_priv.h  lqr_carver_pub.h  lqr_carver_rigmask.c  lqr_carver_rigmask_pub.h  lqr_cursor.c  lqr_cursor_priv.h  lqr_energy.c  lqr_energy_priv.h  lqr_energy_pub.h  lqr_gradient.c  lqr_gradient_priv.h  lqr_progress.c  lqr_progress_priv.h  lqr_progress_pub.h  lqr_rwindow.c  lqr_rwindow_priv.h  lqr_rwindow_pub.h  lqr_vmap.c  lqr_vmap_list.c  lqr_vmap_list_pub.h  lqr_vmap_priv.h  lqr_vmap_pub.h
